Add: staging enviroment, network config, firebase remote config and gradle configurations

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="force_crash_text">Force crash</string>
+    <string name="remote_config_value">Get remote config value</string>
 </resources>
